# agentic-framework-examples

./: .gitignore  LICENSE  README.md
extract-linkedin-premium-users-from-linkedin-groups/: README.md
extract-linkedin-premium-users-from-linkedin-groups/agentic/: README.md  agent.ts  package.json
extract-linkedin-premium-users-from-linkedin-groups/agentic/agno/: .env.example  App.py  README.md  pyproject.toml
extract-linkedin-premium-users-from-linkedin-groups/agentic/crewai/: App.py  README.md  config.TOML  crew.py  install.sh  pyproject.toml  run.sh  workflows.py
extract-linkedin-premium-users-from-linkedin-groups/agentic/langGraph/: .gitignore  README.md  index.ts  package.json  tsconfig.json
extract-linkedin-premium-users-from-linkedin-groups/mcp/: .env.example  README.md  package.json  tsconfig.json
job-seekers-reach-out-to-hiring-managers/: README.md
job-seekers-reach-out-to-hiring-managers/agentic/: README.md
job-seekers-reach-out-to-hiring-managers/agentic/crewai/: App.py  README.md  crew.py  pyproject.toml  workflows.py
job-seekers-reach-out-to-hiring-managers/agentic/crewai/agents/: __init__.py  agents.py
job-seekers-reach-out-to-hiring-managers/agentic/crewai/tools/: __init__.py  check_connection_status_tool.py  fetch_profile_details_tool.py  get_company_details_tool.py  search_geo_location_tool.py  search_hiring_managers_tool.py  search_jobs_tool.py  send_connection_request_tool.py
linkedin-to-sheets-export/: README.md
linkedin-to-sheets-export/agentic/: README.md
linkedin-to-sheets-export/agentic/crewai/: .env.example  App.py  README.md  crew.py  pyproject.toml  workflows.py
linkedin-to-sheets-export/agentic/crewai/agents/: __init__.py  agents.py
linkedin-to-sheets-export/agentic/crewai/tools/: __init__.py  export_to_json_tool.py  export_to_sheets_tool.py  search_geo_location_tool.py  search_people_tool.py
linkedin-to-sheets-export/agentic/crewai/tools/googlesheet/: client.py  export_to_sheets.py
linkedin-to-sheets-export/content/: dev-to-article.md  medium-article.md  substack-article.md
(+205 files in other folders)
