[project]
name = "job-seekers-crewai"
version = "1.0.0"
description = "Job seekers reach out to hiring managers using CrewAI and ConnectSafely.ai"
authors = [
    { name = "ConnectSafely.ai", email = "support@connectsafely.ai" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "crewai[google-genai]>=0.80.0",
    "crewai-tools>=0.12.0",
    "streamlit>=1.39.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "tasks", "tools"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"